[project]
name = "atom2vec"
version = "1.1.0"
description = "A python implement of Atom2Vec: a simple way to describe atoms for machine learning"
authors = [
    { name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" }
]
readme = "README.md"
license = { file = "LICENSE" } # Ensure there's a LICENSE file in your project root
keywords = ["material science", "machine learning"]

requires-python = ">=3.8"
dependencies = [
    "pymatgen>=2022.0.8",
    "scikit-learn>=1.3.2",
    "scipy >= 1.7.3",
]

[project.urls]
Repository = "https://github.com/idocx/atom2vec"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
